public/stylesheets/style.css
/* ... */
/**
 * Remove inner padding and search cancel button in Safari and Chrome on OS X.
 * Safari (but not Chrome) clips the cancel button when the search input has
 * padding (and `textfield` appearance).
 */
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none; }

/**
 * Define consistent border, margin, and padding.
 */
fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em; }

/**
 * 1. Correct `color` not being inherited in IE 8/9/10/11.
 * 2. Remove padding so people aren't caught out if they zero out fieldsets.
 */
legend {
  border: 0;
  /* 1 */
  padding: 0;
  /* 2 */ }

/**
 * Remove default vertical scrollbar in IE 8/9/10/11.
 */
textarea {
  overflow: auto; }

/**
 * Don't inherit the `font-weight` (applied by a rule above).
 * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
 */
optgroup {
  font-weight: bold; }

/* Tables
   ========================================================================== */
/**
 * Remove most spacing between table cells.
 */
table {
  border-collapse: collapse;
  border-spacing: 0; }

td,
th {
  /*   padding: 0;
 */ }

/* Media Queries */
@media(Min-width:1226px){
  .resize {
    width: 60%;
  }
  .full {
    display: inline;
  }
  .med {
    display: none;
  }
  .small {
    display: none;
  }
}
@media (Max-width: 1500px) {
  .project .mask {
    min-height: 360px;
  }
  .project {
    padding-bottom: 60px;
  }
}
@media(Max-width:1225px){
  .resize {
    width: 60%;
  }
  .full {
    display: inline;
  }
  .med {
    display: none;
  }
  .small {
    display: none;
  }
  .project {
    padding-bottom: 225px;
  }
  .project .mask {
    min-height: 260px;
  }
  .project h2 {
    font-size: 18px;
  }

  .project a {
    font-size: 14px;
  }

  section.module p {
    font-size: 16px;
  }
  section.module.parallax {
    height: 0;
  }
  footer {
    top: 200px;
  }

@media(Max-width:900px){
  .resize {
    width: 80%;
  }
  .full {
    display: none;
  }
  .med {
    display: inline;
  }
  .small {
    display: none;
  }
}

@media(Max-width:900px) and (min-width:400px){
  .resize { border: none; }
  .project {
    width: 100%;
    min-height: 200px;
    padding-bottom: 80px;
    padding-left: 60px;
  }
  .project .mask {
    min-height: 450px;
    margin-left: 60px;
    width: 75%;
  }
  .project h2 {
    font-size: 18px;
  }

  .project a {
    font-size: 14px;
  }

  section.module p {
    font-size: 16px;
  }

  footer .fa {
    font-size: 1.0em;
  }

  footer .title {
    font-size: 1.3em;
  }
}

@media(Max-width:600px) {
  .resize { border: none; }
  .project {
    width: 100%;
    min-height: 200px;
    padding-bottom: 150px;
  }
  .project h2 {
    font-size: 16px;
  }
  section.module p {
    font-size: 12px;
  }

  footer .fa {
    font-size: .7em;
  }

  footer .title {
    font-size: 1.0em;
  }

  h5 {
    font-size: 1.0em;
  }
}

/*@media(Max-width:500px){
  footer .fa {
    font-size: .7em;
  }

  footer .title {
    font-size: 1.0em;
  }

  footer .show {
    padding: 3px 3px;
  }

  li {
    font-size: .9em;
  }
}*/

/*@media(Max-width:400px){
  .resize {
    width: 100%;
    border: none;
  }
  .full {
    display: none;
  }
  .med {
    display: none;
  }
  .small {
    display: inline;
  }
  .project h2 {
    font-size: 16px;
  }
  section.module p {
    font-size: 12px;
  }
}*/

